Implemented basic JWT-based authentication (frontend and backend) Added some simple logging info in the auth logic Undeleted CORS filters because they were necessary after all...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
+#logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.web=INFO
+spring.security.filter.order=10
+jwt.secret=top-secret
+jwt.expiration=3600000
