Implemented functionality responsible for sending an email to the user with the payment transaction confirmation data.

--- a/src/main/resources/shop.properties
+++ b/src/main/resources/shop.properties
@@ -1,6 +1,8 @@
 site.name=Costume Shop
 site.url=http://localhost:4200
 
-mail.subject=Verify your registration
+mail.subject.registration=Verify your registration
+mail.subject.transaction=Thank you for your purchase!
 mail.address.from=s14906@pjwstk.edu.pl
-mail.content="Dear [username],<br>Please click the link below to verify your registration:<br><h3><a href=\"[url]\" target=\"_self\">CLICK HERE</a></h3>Thank you,<br>Costume Shop."
+mail.content.registration=Dear [username],<br>Please click the link below to verify your registration:<br><h3><a href=\"[url]\" target=\"_self\">CLICK HERE</a></h3>Thank you,<br>Costume Shop.
+mail.content.transaction=Dear [username],<br>Thank you for your purchase, hope you will like our products.<br>Items purchased:<br>[items]<br>Thank you,<br>Costume Shop.
